New: State machine for MSceneWindow Fixes: NB#169208, MInfoBanner disappear animation is executed when... Fixes: NB#174516, Switching between month, multiday, list and tasks views returns black window
RevBy: Dominik Kapusta
Details:
Adding a state machine for MSceneWindow. That clarifies the
effects of appear() and disappear() upon a scene window at
any given moment.
It also adds an API that applications can use to know whether
a scene window is currently "appeared" on the scene: sceneWindowState()

It organizes what should happen to a scene window at each state
transition.

--- a/doc/src/news.dox
+++ b/doc/src/news.dox
@@ -1,5 +1,19 @@
 /*! \page news What's New in DirectUI
 
+\section v02020 0.20.20
+
+\subsection New
+- MSceneWindow now has a state machine: MSceneWindow::SceneWindowState. To check whether
+  a scene window is being shown on the scene, MSceneWindow::sceneWindowState() should
+  be used instead of QGraphicsItem::isVisible() or MWidget::isOnDisplay() since those
+  other two methods have different semantics.
+  - New API:
+    - MSceneWindow::SceneWindowState enumeration, describes the possible states of a scene window.
+    - MSceneWindow::appearing() signal, emitted when MSceneWindow::Appearing state is reached.
+    - MSceneWindow::disappearing() signal, emitted when MSceneWindow::Disappearing state is reached.
+    - MSceneWindow::sceneWindowState(), getter for the current state.
+    - MSceneWindow::sceneWindowStateChanged(newState, oldState), emitted whenever the scene window state changes.
+
 \section v0202 0.20.2
 
 \subsection New
