--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+libmeegotouch (0.20.14.1~1) unstable; urgency=low
+
+  * Fixes: NB#172276 - duihome crashes after boot
+
+ -- Vesa Halttunen <vesa.halttunen@nokia.com>  Thu, 3 Jun 2010 17:42:29 +0300
+
 libmeegotouch (0.20.14-1) unstable; urgency=low
 
   * Fixes: ABI break between 0.20.12 and 0.20.13 in MLabelView
