--- a/debian/changelog
+++ b/debian/changelog
@@ -1,4 +1,4 @@
-libmeegotouch (0.20.15~1) UNRELEASED; urgency=low
+libmeegotouch (0.20.15-1) unstable; urgency=low
 
   * Changes: Screenshot-feature: Press shift+ctrl+t
   * Fixes: NB#172276 - duihome crashes after boot
