--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+libmeegotouch (0.20.16~1) UNRELEASED; urgency=low
+
+  * ...
+
+ -- Jorgen Scheibengruber <jorgen.scheibengruber@nokia.com>  Fri, 04 Jun 2010 13:21:16 +0300
+
 libmeegotouch (0.20.15-1) unstable; urgency=low
 
   * Changes: Screenshot-feature: Press shift+ctrl+t
