--- a/debian/changelog
+++ b/debian/changelog
@@ -1,8 +1,8 @@
-libmeegotouch (0.20.16~1) UNRELEASED; urgency=low
+libmeegotouch (0.20.16-1) unstable; urgency=low
 
-  * ...
+  * Fixes: NB#170284 - MTheme::pixmap(const QString&) does not initialize the sizes of loaded QPixmap instances
 
- -- Jorgen Scheibengruber <jorgen.scheibengruber@nokia.com>  Fri, 04 Jun 2010 13:21:16 +0300
+ -- Daniel d'Andrada <daniel.dandrada@nokia.com>  Mon, 07 Jun 2010 16:30:45 +0300
 
 libmeegotouch (0.20.15-1) unstable; urgency=low
 
