--- a/doc/src/news.dox
+++ b/doc/src/news.dox
@@ -1,6 +1,6 @@
 /*! \page news What's New in DirectUI
 
-\section v0202
+\section v0202 0.20.2
 
 \subsection New
 
@@ -13,7 +13,7 @@
  the ensureCursorVisible() slot.
 
 
-\section v0200
+\section v0200 0.20.0
 
 \subsection New
 
@@ -169,7 +169,7 @@
 - Removed DuiWidgetView::contentPosition().
 - dismissAnimation() was removed from DuiSceneWindowStyle.
 
-\section v0190
+\section v0190 0.19.0
 
 \subsection New
 
