--- a/debian/changelog
+++ b/debian/changelog
@@ -1,6 +1,6 @@
 libmeegotouch (0.20.19~1) unstable; urgency=low
 
-  * [UNRELEASED]
+  * Fixes: NB#171466 - The MNotification::notifications() returns non-initialized notifications?
 
  -- Daniel d'Andrada <daniel.dandrada@nokia.com>  Mon, 14 Jun 2010 16:41:28 +0300
 
