--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+libmeegotouch (0.20.19~1) unstable; urgency=low
+
+  * [UNRELEASED]
+
+ -- Daniel d'Andrada <daniel.dandrada@nokia.com>  Mon, 14 Jun 2010 16:41:28 +0300
+
 libmeegotouch (0.20.18-1) unstable; urgency=low
 
   * Fixes: NB#174290 - Button in webpage causes segfault
