New: Support for setting video global alpha in MWindow.
RevBy: Daniel d'Andrada
Details:
Provide an easy API in MWindow to use the video global
alpha feature in Harmattan.

--- a/doc/src/news.dox
+++ b/doc/src/news.dox
@@ -1,5 +1,10 @@
 /*! \page news What's New in DirectUI
 
+\section v02024 0.20.24
+
+\subsection New
+- videoGlobalAlpha property in MWindow.
+
 \section v02020 0.20.20
 
 \subsection New
